desktop-pwas: Stop opening out-of-scope popups in the app's theme

Moves out-of-scope initial navigations, which are popups from one of the
app's windows, into regular popups without the parent's theme and icon.

Bug: 806654
Change-Id: If679a6ecee79068e94975ae317126ac3c05f9ba5
Reviewed-on: https://chromium-review.googlesource.com/1011463
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550469}
Former-commit-id: 0e3890eb140383d6e7068fa1371ebe67edca8fe4